atualização das imagens

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     </head>
     <body>
         <div class="game">
-            <img src="./Images/central-city.webp" class="cloud-game" />
-            <img src="./Images/flash.gif" class="super-mario" />
-            <img src="./Images/flash-reverso.png" class="pipe-game" />
+            <img src="./Images/central-city.webp" class="central-city" />
+            <img src="./Images/flash.gif" class="super-flash" />
+            <img src="./Images/flash-reverso.png" class="flash-reverso" />
         </div>
         <script src="./js/script.js"></script>
     </body>
