--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="./css/style.css" /> 
         <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https: //fonts.googleapis.com/css2? family= VT323 & display=swap" rel="stylesheet">
-        <title>The Flash StartSe</title>
+       <title>The Flash StartSe</title>
     </head>
     <body>
         <div class="game">
-            <img src="./Images/central-city.webp" class="central-city" />
-            <img src="./Images/flash.gif" class="super-flash" />
-            <img src="./Images/flash-reverso.png" class="flash-reverso" />
+            <h1 class="score">score:</h1>
+            <img src="./imagens/central-city.webp" class="central-city" />
+            <img src="./imagens/flash.gif" class="super-flash" />
+            <img src="./imagens/flash-reverso.png" class="flash-reverso" />
         </div>
         <script src="./js/script.js"></script>
     </body>
