adição de sons e score

--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
     <audio src="./audio/audio_Mario Game Over.mp3" preload="auto" id="somGameover"></audio>
 
 
-        <script src="./js/script.js"></script>
+        <script src="js/script.js"></script>
     </body>
 </html>
